Made instructions into an ordered list, fixed styling so that all list items would be left aligned not just unordered list items

--- a/my-react-app/src/index.css
+++ b/my-react-app/src/index.css
@@ -9,7 +9,7 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-ul {
+li {
   text-align: left;
 }
 
